--- a/socials.html
+++ b/socials.html
@@ -42,7 +42,7 @@
       cursor: pointer;
       position: relative;
       margin: 5px;
-      background-color: #4b4b4b;
+      background-color: #191919;
     }
 
     .icon {
@@ -198,7 +198,7 @@
           window.open("https://www.tiktok.com/", '_blank').focus(); //Add the url to your tiktok account
         }
         else if (id === "youtube") {
-          window.open("https://www.youtube.com/", '_blank').focus(); //Add the url to your youtube account
+          window.open("https://youtu.be/dQw4w9WgXcQ", '_blank').focus(); //Add the url to your youtube account
         }
         else if (id === "pinterest") {
           window.open("https://www.pinterest.com/", '_blank').focus(); //Add the url to your pinterest account
