--- a/socials.html
+++ b/socials.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=250px", initial-scale=1.0">
+  <meta name="viewport" content="width=device-width", initial-scale=1.0">
   <title>My Socials</title>
 
   <!-- Font Awesome -->
@@ -35,13 +35,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      width: 30px;
-      height: 25px;
+      width: 40px;
+      height: 40px;
       color: #fff;
       outline: 0;
       cursor: pointer;
       position: relative;
-      margin: 3px;
+      margin: 5px;
       background-color: #191919;
     }
 
@@ -153,7 +153,13 @@
         <span class="icon"><i class="fab fa-github"></i></span>
       </div>
       <!-- End github Icon -->
-
+                                                    
+                                                   
+      <!-- Start github Icon -->
+      <div id="instagram" onclick="navigate(this.id)" class="fill instagram">
+        <span class="icon"><i class="fab fa-instagram"></i></span>
+      </div>
+      <!-- End github Icon -->
 
 
     </div>
