--- a/greetingss.html
+++ b/greetingss.html
@@ -18,6 +18,7 @@
         .widget {
             padding: 5px 5px ;
             color: #FFFFFF;
+            background: #000000;
             display: flex;
             justify-content:center;
             align-items:center;
