--- a/counter.html
+++ b/counter.html
@@ -1,1 +1,3 @@
-<div id="sfc613wsd6xkplc631nc2g1sf522sn1ejtk"></div><script type="text/javascript" src="https://counter5.optistats.ovh/private/counter.js?c=613wsd6xkplc631nc2g1sf522sn1ejtk&down=async" async></script><noscript><a href="https://www.freecounterstat.com" title="website counters"><img src="https://counter5.optistats.ovh/private/freecounterstat.php?c=613wsd6xkplc631nc2g1sf522sn1ejtk" border="0" title="website counters" alt="website counters"></a></noscript>
+<!-- Badge Code - Do Not Change The Code -->
+<a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" title="Hit counter" data-name="f063991ee4065d31dfbf64c7de558ce6|8|external|1|#ffffff|#000000|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
+<!-- Badge Code End Here -->
